--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,15 +1,20 @@
-name: Build and Publish Docker
+name: Build and Publish Docker Image
 
 on:
   push:
     branches:
+      - new-index
       - feature/add-dockerfile
+    tags:
+      - '*'
 
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
     env:
       IMAGE_NAME: electrs
+      SHA8: ${GITHUB_SHA::8}
+      TAG: ${GITHUB_REF#refs/tags/}
     steps:
       - name: checkout
         uses: actions/checkout@v2
@@ -31,3 +36,4 @@ jobs:
           push: true
           tags: |
             ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest
+            ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ env.TAG }}-${{ env.SHA8 }}
