--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,4 +1,4 @@
-name: Build and Publish Docker Image
+name: Build and Publish to Docker Hub
 
 on:
   push:
@@ -11,10 +11,6 @@ on:
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
-    env:
-      IMAGE_NAME: electrs
-      SHA8: ${GITHUB_SHA::8}
-      TAG: ${GITHUB_REF#refs/tags/}
     steps:
       - name: checkout
         uses: actions/checkout@v2
@@ -22,26 +18,26 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Login to GitHub Container Registry
+      - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.CR_PAT }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Get short SHA
         id: short-sha
         run: echo "::set-output name=sha8::$(echo ${GITHUB_SHA} | cut -c1-8)"
 
-      - name: Get tagname
+      - name: Get nearest tagname
         id: tagname
-        run: echo ::set-output name=tagname::${GITHUB_REF/refs\/tags\//}
+        run: echo ::set-output name=tagname::$(git describe --abbrev=0 --tags --always)
 
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
-          tags: |
-            ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest
-            ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ steps.tagname.outputs.tagname }}-${{ steps.short-sha.outputs.sha8 }}
+          repository: ${{ github.repository }}
+          tags:
+            - ${{ github.repository }}:latest
+            - ${{ github.repository }}:${{ steps.tagname.outputs.tagname }}-${{ steps.short-sha.outputs.sha8 }}
