--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0 # tag情報も取得するため
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
