--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -11,8 +11,6 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0 # tag情報も取得するため
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -29,7 +27,7 @@ jobs:
 
       - name: Get nearest tagname
         id: tagname
-        run: echo ::set-output name=tagname::$(git describe --abbrev=0 --tags --always)
+        run: echo ::set-output name=tagname::${GITHUB_REF/refs\/tags\//}
 
       - name: Build and push
         uses: docker/build-push-action@v2
@@ -53,8 +51,6 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0 # tag情報も取得するため
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -71,7 +67,7 @@ jobs:
 
       - name: Get nearest tagname
         id: tagname
-        run: echo ::set-output name=tagname::$(git describe --abbrev=0 --tags --always)
+        run: echo ::set-output name=tagname::${GITHUB_REF/refs\/tags\//}
 
       - name: Build and push
         uses: docker/build-push-action@v2
