--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -50,4 +50,4 @@ jobs:
       - uses: actions/checkout@v3
       - uses: DeterminateSystems/nix-installer-action@main
       - run: nix build .
-
+        continue-on-error: true
