--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,53 +1,74 @@
 name: CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+      - master
+      - new-index
+  pull_request:
+    types: [opened, reopened, synchronize]
 
 jobs:
   test:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
+    timeout-minutes: 20
+    permissions:
+      contents: read
+      pull-requests: write
     env:
       CARGO_TERM_COLOR: always
 
     steps:
-    - uses: actions/checkout@v2
+      - name: setup
+        run: sudo apt install -y libfuse2
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          persist-credentials: "false"
 
-    - name: Cache cargo registry
-      uses: actions/cache@v1
-      with:
-        path: ~/.cargo/registry
-        key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
+      - name: Cache cargo registry
+        uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
+        with:
+          path: ~/.cargo/registry
+          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
 
-    - name: Cache cargo index
-      uses: actions/cache@v1
-      with:
-        path: ~/.cargo/git
-        key: ${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}
+      - name: Cache cargo index
+        uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
+        with:
+          path: ~/.cargo/git
+          key: ${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}
 
-    - name: Cache cargo build
-      uses: actions/cache@v1
-      with:
-        path: target
-        key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
+      - name: Cache cargo build
+        uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
+        with:
+          path: target
+          key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
 
-    #- name: Check formatting
-    #  run: cargo fmt -- --check
+      #- name: Check formatting
+      #  run: cargo fmt -- --check
 
-    - name: Setup Rust toolchain
-      run: rustup default 1.75.0
+      - name: Setup Rust toolchain
+        run: rustup default 1.75.0
 
-    - name: Check for errors
-      run: cargo check
+      - name: Check for errors
+        run: cargo check
 
-    - name: Tests (Bitcoin mode, REST+Electrum)
-      run: RUST_LOG=debug cargo test
+      - name: Tests (Bitcoin mode, REST+Electrum)
+        run: RUST_LOG=debug cargo test
 
-    - name: Tests (Liquid mode, REST)
-      run: RUST_LOG=debug cargo test --features liquid
+      - name: Tests (Liquid mode, REST)
+        run: RUST_LOG=debug cargo test --features liquid
 
   nix:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
-      - uses: actions/checkout@v3
-      - uses: DeterminateSystems/nix-installer-action@main
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          persist-credentials: "false"
+      - uses: DeterminateSystems/nix-installer-action@21a544727d0c62386e78b4befe52d19ad12692e3 # v17
       - run: nix build .
         continue-on-error: true
